include/dss_capi.h

    DSS_CAPI_DLL char* DSS_Executive_Get_Command(int32_t i);
    DSS_CAPI_DLL int32_t DSS_Executive_Get_NumCommands(void);
    DSS_CAPI_DLL int32_t DSS_Executive_Get_NumOptions(void);
    DSS_CAPI_DLL char* DSS_Executive_Get_Option(int32_t i);
    DSS_CAPI_DLL char* DSS_Executive_Get_CommandHelp(int32_t i);
    DSS_CAPI_DLL char* DSS_Executive_Get_OptionHelp(int32_t i);
    DSS_CAPI_DLL char* DSS_Executive_Get_OptionValue(int32_t i);